# xone-battery

./: Cargo.toml  README.md  build.ps1  build.rs
res/: application.manifest  application.rc  application.res
src/: gamepads.rs  main.rs  win.rs
