[package]
name = "xone-battery"
version = "0.1.0"
authors = ["Kim Sevandersson<ksevandersson@gmail.com>"]

[dependencies]
uuid = { version = "0.3.0", features = ["v4"] }

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs"

[dependencies.xinput-sys]
git = "https://github.com/retep998/winapi-rs"

[dependencies.user32-sys]
git = "https://github.com/retep998/winapi-rs"

[dependencies.kernel32-sys]
git = "https://github.com/retep998/winapi-rs"

[dependencies.shell32-sys]
git = "https://github.com/retep998/winapi-rs"